# user-rust

./: .dockerignore  .env  Cargo.toml  Dockerfile  Earthfile  README.md  docker-compose.yaml
.github/workflows/: master.yml  rust.yml  tags.yaml
db/: empty_db.sql
gui/: package-lock.json  package.json
gui/public/: index.html
gui/src/: App.vue
gui/src/components/: Home.vue  UsersComponent.vue  WallComponent.vue
gui/src/router/: index.js
gui/src/views/: Users.vue  Wall.vue
k8s/: deploy.yaml
migrations/2020-10-08-135155_users/: down.sql  up.sql
src/: errors.rs  lib.rs  schema.rs
src/db/: database.rs  errors.rs  friends.rs  lib.rs  messages.rs  mod.rs  models.rs  users.rs
src/utils/: lib.rs
