[package]
name = "user_rust"
version = "0.1.0"
authors = ["John Sigvald Skauge <johnsigvaldskauge@tv2.no>"]
edition = "2018"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features =  ["postgres", "numeric", "uuid", "quickcheck", "serde_json", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_derive = { version = "1.0.117"}
dotenv = "0.15.0"
rust-argon2 = "0.8"
rand = "0.7"
actix-web = "3"
actix-http = "2.1.0"
actix-files = "0.4.0"
actix-cors = "0.5.3"
jsonwebtoken = "7.2.0"
futures = "0.3.7"
#prometheus = "0.10.0"
actix-web-prom = "0.5"
#Logging
env_logger = "0.7.1"
log = { version = "0.4.8", features = ["max_level_debug", "release_max_level_debug"] }

